Fix anchor tag styling not showing up and made anchor tags more noticeable

--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -17,6 +17,7 @@
   border-radius: var(--bs-border-radius);
 }
 
-a{
-  text-decoration: dotted;
+a {
+  font-weight: bold;
+  text-decoration-style: dotted;
 }
